--- a/CTP/CTP.vcxproj.filters
+++ b/CTP/CTP.vcxproj.filters
@@ -53,4 +53,7 @@
   <ItemGroup>
     <Text Include="ReadMe.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
 </Project>
