拆封了datatype并且修正了一些错误。

--- a/CTP/CTP.VS2010.Net4.0.vcxproj
+++ b/CTP/CTP.VS2010.Net4.0.vcxproj
@@ -122,6 +122,7 @@
     <ClInclude Include="CTP.h" />
     <ClInclude Include="CTPMDAdapter.h" />
     <ClInclude Include="CTPTraderAdapter.h" />
+    <ClInclude Include="DataType.h" />
     <ClInclude Include="Delegates.h" />
     <ClInclude Include="MdSpi.h" />
     <ClInclude Include="Stdafx.h" />
