--- a/CTP/CTP.VS2010.Net4.0.vcxproj
+++ b/CTP/CTP.VS2010.Net4.0.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{321418DC-AFAB-4D02-9BC8-9A1D73D7BE1C}</ProjectGuid>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <RootNamespace>CTP</RootNamespace>
     <Keyword>ManagedCProj</Keyword>
     <ProjectName>CTP.VS2010.Net4.0</ProjectName>
@@ -66,7 +67,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <GenerateXMLDocumentationFiles>true</GenerateXMLDocumentationFiles>
       <WarningLevel>Level3</WarningLevel>
-      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <DebugInformationFormat>None</DebugInformationFormat>
     </ClCompile>
     <Link>
       <AdditionalDependencies>..\ThostTraderApi\thostmduserapi.lib;..\ThostTraderApi\thosttraderapi.lib</AdditionalDependencies>
@@ -108,7 +109,9 @@
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="CTP.cpp" />
     <ClCompile Include="CTPMDAdapter.cpp" />
+    <ClCompile Include="CTPMDAdapterBase.cpp" />
     <ClCompile Include="CTPTraderAdapter.cpp" />
+    <ClCompile Include="CTPTraderAdapterBase.cpp" />
     <ClCompile Include="MdSpi.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -121,13 +124,16 @@
     <ClInclude Include="Callbacks.h" />
     <ClInclude Include="CTP.h" />
     <ClInclude Include="CTPMDAdapter.h" />
+    <ClInclude Include="CTPMDAdapterBase.h" />
     <ClInclude Include="CTPTraderAdapter.h" />
-    <ClInclude Include="DataType.h" />
+    <ClInclude Include="CTPTraderAdapterBase.h" />
     <ClInclude Include="Delegates.h" />
     <ClInclude Include="MdSpi.h" />
+    <ClInclude Include="MdSpiBase.h" />
     <ClInclude Include="Stdafx.h" />
     <ClInclude Include="Struct.h" />
     <ClInclude Include="TraderSpi.h" />
+    <ClInclude Include="TraderSpiBase.h" />
     <ClInclude Include="Util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
