--- a/CTP/CTPMA.VS2010.Net4.0.vcxproj
+++ b/CTP/CTPMA.VS2010.Net4.0.vcxproj
@@ -66,7 +66,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <GenerateXMLDocumentationFiles>true</GenerateXMLDocumentationFiles>
       <WarningLevel>Level3</WarningLevel>
-      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <DebugInformationFormat>None</DebugInformationFormat>
     </ClCompile>
     <Link>
       <AdditionalDependencies>..\ThostTraderApi\thostmduserapi.lib;..\ThostTraderApi\thosttraderapi.lib</AdditionalDependencies>
